--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- <div class="col-md-6 mb-4"> -->
 
               <!-- Material form contact -->
-              <div class="mx-xl-5" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbycgOlJlk6sU1xdU79DnVajTy28BLl4vnOeXLyAGcq5qB9N4v-q/exec">
+              <form class="mx-xl-5" id="gform" method="POST" action="https://script.google.com/macros/s/AKfycbycgOlJlk6sU1xdU79DnVajTy28BLl4vnOeXLyAGcq5qB9N4v-q/exec">
                 <!--input id must be honeypot or else it wont work-->
                   <label class="sr-only">Keep this field blank</label>
                   <input id="honeypot" type="text" name="honeypot" value="" />
@@ -57,7 +57,7 @@
                   <div class="text-center mt-4">
                       <button class="btn btn-outline-secondary waves-effect waves-light" id="sendbtn" type="submit">Send<i class="fa fa-paper-plane-o ml-2"></i></button>
                   </div>
-              </div>
+              </form>
               <!-- Material form contact -->
 
             <!-- Grid column -->
@@ -69,7 +69,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <!-- <script type="text/javascript" src="js/app.js"></script> -->
     <!-- MDB core JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/js/mdb.min.js"></script>
     <script data-cfasync="false" type="text/javascript"
