--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
               <!-- Material form contact -->
 
             <!-- Grid column -->
+            <!-- Customise the Thankyou Message People See when they submit the form: -->
+            <div style="display:none;" id="thankyou_message">
+              <h2><em>Thanks</em> for contacting us!
+                We will get back to you soon!</h2>
+            </div>
     </section>
 
     <!-- JQuery -->
